--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebSite</title>
+  </head>
+  <body>
+ <header>
+  <a href="#"><img src="#" id="Logo"></a>
+  <nav>
+    <ul>
+      <li><a href="#">How it works</a></li>
+      <li><a href="#">Our community</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Client reviews</a></li>
+    </ul>
+    <button>Try for free <img src="#" id="icone1"></button>
+  </nav>
+</header>
+<main>
+  <section>
+    <h1>Your 👨🏽‍🦱👩🏻 personalized <br> AI for mindfulness</h1>
+    <ul>
+      <li><p>Neuroscience-Backed Mindfulness</p></li>
+      <li><p>Embark on a journey towards inner peace, balance and self-discovery.</p></li>
+    </ul>
+    <button>Get app <img src="#" id="icone2"></button>
+  </section>
+  <section>
+    <div>
+      <img src="#" id="cara estranho">
+      <p>Developed together with science-based mental health experts.</p>
+    </div>
+    <div>
+      <p><strong>12+</strong></p>
+      <p>Evidence-based therapy methods available.</p>
+      <ul>
+        <li><button>CBT</button></li>
+        <li><button>MBSR</button></li>
+        <li><button>ACT</button></li>
+      </ul>
+    </div>
+    <hr>
+    <div>
+      <p><strong>200+</strong></p>
+      <p>Therapists available for personal appointments.</p>
+      <ul>
+        <li><img src="#" id="pessoa1"></li>
+        <li><img src="#" id="pessoa2"></li>
+        <li><img src="#" id="+"></li>
+      </ul>
+    </div>
+    <div>
+      <p><strong>4.8</strong></p>
+      <p>Explore our customer reviews on App Store</p>
+      <img src="#" id="celular">
+    </div>
+  </section>
+</main>
+  </body>
+</html>
