--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WebSite</title>
   </head>
   <body>
- <header>
+<header>
   <a href="#"><img src="#" id="Logo"></a>
   <nav>
     <ul>
@@ -22,19 +22,19 @@
   <section>
     <h1>Your 👨🏽‍🦱👩🏻 personalized <br> AI for mindfulness</h1>
     <ul>
-      <li><p>Neuroscience-Backed Mindfulness</p></li>
-      <li><p>Embark on a journey towards inner peace, balance and self-discovery.</p></li>
+      <li><h3>Neuroscience-Backed Mindfulness</h3></li>
+      <li><h5>Embark on a journey towards inner peace, balance and self-discovery.</h5></li>
     </ul>
     <button>Get app <img src="#" id="icone2"></button>
   </section>
   <section>
     <div>
       <img src="#" id="cara estranho">
-      <p>Developed together with science-based mental health experts.</p>
+      <h3>Developed together with science-based mental health experts.</h3>
     </div>
     <div>
-      <p><strong>12+</strong></p>
-      <p>Evidence-based therapy methods available.</p>
+      <h2>12+</p>
+      <h5>Evidence-based therapy methods available.</h5>
       <ul>
         <li><button>CBT</button></li>
         <li><button>MBSR</button></li>
@@ -43,8 +43,8 @@
     </div>
     <hr>
     <div>
-      <p><strong>200+</strong></p>
-      <p>Therapists available for personal appointments.</p>
+      <h2>200+</h2>
+      <h5>Therapists available for personal appointments.</h5>
       <ul>
         <li><img src="#" id="pessoa1"></li>
         <li><img src="#" id="pessoa2"></li>
@@ -52,8 +52,8 @@
       </ul>
     </div>
     <div>
-      <p><strong>4.8</strong></p>
-      <p>Explore our customer reviews on App Store</p>
+      <h2>4.8</h2>
+      <h5>Explore our customer reviews on App Store</h5>
       <img src="#" id="celular">
     </div>
   </section>
