Trabalho do Charleno

--- a/index.html
+++ b/index.html
@@ -1,62 +1,49 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebSite</title>
-  </head>
-  <body>
-<header>
-  <a href="#"><img src="#" id="Logo"></a>
-  <nav>
-    <ul>
-      <li><a href="#">How it works</a></li>
-      <li><a href="#">Our community</a></li>
-      <li><a href="#">About us</a></li>
-      <li><a href="#">Client reviews</a></li>
-    </ul>
-    <button>Try for free <img src="#" id="icone1"></button>
-  </nav>
-</header>
-<main>
-  <section>
-    <h1>Your 👨🏽‍🦱👩🏻 personalized <br> AI for mindfulness</h1>
-    <ul>
-      <li><h3>Neuroscience-Backed Mindfulness</h3></li>
-      <li><h5>Embark on a journey towards inner peace, balance and self-discovery.</h5></li>
-    </ul>
-    <button>Get app <img src="#" id="icone2"></button>
-  </section>
-  <section>
-    <div>
-      <img src="#" id="cara estranho">
-      <h3>Developed together with science-based mental health experts.</h3>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head> 
+<body>
+    <div class="eu">
+        <header>
+            <i class="bi bi-envelope"></i>
+                <h1>New Opportunity</h1>
+                <div>
+                <button id="B">Available</button> 
+            </div>
+        </header>
+        <section>
+                    <img src="" alt="Jenifer A.">
+                    <p>Meta - Facebook California</p>
+            <h2> $35,000 - $45,000</h2>
+            <p id="h">14 Oct - 2024</p>
+            <p id="j">89.5% Match</p>
+            <ul id="B9">
+                <p></p>
+                    <button id="B1">4.9</button>
+                <p></p>
+                    <button id="B2">Web Design</button>
+                <p></p>
+                    <button id="B3">Responsive</button>
+                
+            </ul>
+            <p></p>
+            <h5>Need Responsive Website showcase product Modern and visually appealing design.</h5>
+            <img src="" alt="Robert T.">
+            <p> Full Cycle Agency</p>
+        </section>
+        <section>
+            <p></p>
+            <ul id="Butao">
+        <button id="B5">Accept Project</button>
+        <p></p>
+        <button id="B6">Decline Offer</button>
+            </ul>
+        </section>
     </div>
-    <div>
-      <h2>12+</p>
-      <h5>Evidence-based therapy methods available.</h5>
-      <ul>
-        <li><button>CBT</button></li>
-        <li><button>MBSR</button></li>
-        <li><button>ACT</button></li>
-      </ul>
-    </div>
-    <hr>
-    <div>
-      <h2>200+</h2>
-      <h5>Therapists available for personal appointments.</h5>
-      <ul>
-        <li><img src="#" id="pessoa1"></li>
-        <li><img src="#" id="pessoa2"></li>
-        <li><img src="#" id="+"></li>
-      </ul>
-    </div>
-    <div>
-      <h2>4.8</h2>
-      <h5>Explore our customer reviews on App Store</h5>
-      <img src="#" id="celular">
-    </div>
-  </section>
-</main>
-  </body>
+</body>
 </html>
